<resources>
    <string name="app_name">SMS Forwarder</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="contains">Contains</string>
    <string name="forward_to_number">Forward To Number</string>
    <string name="failed_to_save">Failed to save</string>
    <string name="permission_note">Note: Need SMS Permission to work properly. Allow permission in setting, if denied when asked.</string>
    <string name="developer_details">Developed by Riyazuddin</string>
</resources>