<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/forwardToTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forward_to_number"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/deleteIB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/containsTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/contains"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/forwardToTV"
        app:layout_constraintStart_toStartOf="@+id/forwardToTV"
        app:layout_constraintTop_toBottomOf="@id/forwardToTV" />

    <ImageButton
        android:id="@+id/deleteIB"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/containsTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/forwardToTV"
        app:srcCompat="@drawable/ic_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>